# leptos_heroicons

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
example/: Cargo.toml  README.md  index.html
example/src/: components.rs  main.rs
generate_components/: Cargo.toml  README.md
generate_components/src/: constants.rs  download_heroicons.rs  main.rs
generate_example_components/: Cargo.toml  README.md
generate_example_components/src/: main.rs
src/: lib.rs
