[package]
name = "example"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
leptos = { workspace = true, features = ["csr"] }
leptos_heroicons = { path = "..", features = [
  "24-solid",
  "24-outline",
  "20-solid",
  "16-solid",
]}
wasm-bindgen = "0.2"
web-sys = { version = "0.3" }
console_error_panic_hook = "0.1"
wasm-logger = "0.2"
