[package]
name = "generate_components"
version.workspace = true
edition.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0"
convert_case = "0.6"
indoc = "2.0"
regex = "1.10"
reqwest = { version = "0.11", features = ["blocking"] }
toml = "0.8"
zip = { version = "0.6", features = ["deflate"], default-features = false }
